# tresr-game

./: .cspell.yaml  .devcontainer.json  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.yaml  .versionrc  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  astro.config.mjs  bunfig.toml  devenv.nix  devenv.yaml  eslint.config.js  juno.config.mjs  package-lock.json  package.json  parse_test  parse_test.rs  project-words.txt  secretspec.toml  svelte.config.js  test_skip.yaml  trivy.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: codeql-config.yml  copilot-instructions.md  dependabot.yml
.github/pr-comments/: thumbs_down.yaml  thumbs_up.yaml
.github/workflows/: bootstrap.yaml  cd-devenv-update.yaml  cd-foundry-mainnet.yaml  cd-foundry-testnet.yaml  cd-foundry.yaml  cd-juno-deploy-mainnet.yaml  cd-juno-deploy.yaml  cd-juno-mainnet.yaml  cd-juno-publish-mainnet.yaml  cd-juno-publish.yaml  cd-juno-testnet.yaml  cd-mainnet.yaml  cd-release-mainnet.yaml  cd-release-testnet.yaml  cd-release.yaml  cd-testnet.yaml  cd.yaml  chore-devenv-update.yaml  chore-pr-title.yaml  chore-vault-topup.yaml  ci-devenv.yaml  ci-foundry.yaml  ci-juno.yaml  ci-pr-title.yaml  ci-trivy.yaml  ci.yaml  comments.yaml  issue-comments.yaml  sec-codeql.yaml  sec-trivy.yaml
config/: changelog.yaml  config-server.json  credits.yaml  tresr.yaml
contracts/: .gitignore  README.md  foundry.toml  slither.config.json
contracts/script/: DeployTestToken.s.sol  DeployToken.s.sol  UpgradeVault.s.sol  Vault.s.sol
contracts/src/: Counter.sol  Faucet.sol  Token.sol  TresrFaucet.sol  TresrTestToken.sol  Vault.sol
contracts/test/: Faucet.t.sol  Token.t.sol  TresrFaucet.t.sol  TresrTestToken.t.sol  Vault.t.sol
docs/: architecture.md  blockchain.md  bootstrap.md  ci-cd.md  data-storage.md  deployment.md  development.md  evm-rpc.md  features.md  fomo.md  layout.md  roadmap.md  security.md  solidity.md  spec.md  submodules.md  testing.md  troubleshooting.md
docs/agents/: astro.txt  cloudflare.txt  foundry.txt  icp-cli.txt  juno.txt  oisy.txt  reown.txt  sveltekit.txt  viem.txt  wagmi.txt  xai.txt  zod.txt
docs/prompts/: implementation.md  loop.md  ralph.md  review.md  sprites-single.md  sprites-stills.md  sprites.md  wallpapers.md
public/: config-client.json  manifest.json  precache-manifest.json
scripts/: codeql-run.sh  debug-mcp.sh  juno-dev.sh  juno-loop.sh  reset-git-modules.sh  solidity-dev.sh
src/: app.html  env.d.ts  globals.d.ts
src/integrations/: sw-builder.mjs  sw-builder.ts
src/layouts/: BaseLayout.astro
src/pages/: 404.astro  admin.astro  build-games.astro  calc.astro  changelog.astro  claims.astro  credits.astro  game.astro  index.astro
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/satellite/: Cargo.toml  build.rs  satellite_extension.did
src/satellite/src/: evm_rpc.rs  evm_rpc_types.rs  lib.rs  logging.rs  types.rs
src/styles/: global.css
src/types/: backend.ts  config.ts  game.ts  global.d.ts
static/: config-client.json  precache-manifest.json  sw.js
(+308 files in other folders)
