[package]

name = "satellite"
version = "0.0.0"
edition = "2024"

[lib]

crate-type = ["cdylib", "rlib"]

[dependencies]

# Juno SDK indirectly requires getrandom 0.3 (via rand 0.9).
# On wasm32-unknown-unknown, the custom backend is selected via RUSTFLAG:
#   --cfg getrandom_backend="custom"  (see .cargo/config.toml)
# No Cargo feature is needed — junobuild-satellite provides the custom
# getrandom implementation via on_init_random_seed.
getrandom = "0.3"

# Juno SDK
junobuild-satellite = { version = "0.6.0", default-features = false, features = [
    "assert_set_doc",
    "assert_delete_doc",
    "on_set_doc",
    "on_set_many_docs",
    "on_delete_doc",
    "on_delete_many_docs",
    "on_upload_asset",
    "on_delete_asset",
    "on_delete_many_assets",
    "on_init_random_seed",
] }
junobuild-didc = "0.2.0"
junobuild-shared = "0.7.1"
junobuild-macros = "0.3.1"
junobuild-storage = { version = "0.6.1", default-features = false }
junobuild-utils = "0.3.0"

# Internet Computer SDK
candid = "0.10.23"
ic-cdk = "0.20.0"
ic-cdk-macros = "0.20"
ic-cdk-management-canister = "0.1"
ic-cdk-timers = "1.0"
ic-stable-structures = "0.7"
ic-certified-map = "0.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# EVM transaction building
hex = "0.4.3"
rlp = "0.6.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
libsecp256k1 = "0.7.1"

# Additional dependencies
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
sha2 = "0.10"
lazy_static = "1.4"
futures = { version = "0.3", default-features = false, features = ["executor"] }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
